--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,8 @@ dependencies:
   cupertino_icons: ^0.1.2
   http: ^0.12.1
   shared_preferences: ^0.5.7+3
+  flutter_redux: ^0.6.0
+  redux_thunk: ^0.3.0
 
 dev_dependencies:
   flutter_test:
