--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,8 +13,13 @@ dependencies:
   cupertino_icons: ^0.1.2
   http: ^0.12.1
   shared_preferences: ^0.5.7+3
-  flutter_redux: ^0.6.0
-  redux_thunk: ^0.3.0
+  flutter_redux: 0.5.3
+  redux_thunk: 0.2.1
+  redux_logging: ^0.3.0
+  badges: 0.0.6
+  stripe_payment: 0.1.0
+  modal_progress_hud: 0.1.3
+  intl: 0.15.7
 
 dev_dependencies:
   flutter_test:
